Fixed positioning on widget headers so that icon and header would be aligned vertically

--- a/assets/index.css
+++ b/assets/index.css
@@ -442,14 +442,20 @@ main {
     padding: 15px;
 }
 
+.widget-header-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    gap: 7px;
+}
+
 .widget-header-label {
     margin-left: 3px;   
 }
 
 .widget-header-small {
     font-size: 0.8em;
-
-    margin-left: 3px;
 }
 
 .details-label {
